--- a/game_040a0d68173b428d.html
+++ b/game_040a0d68173b428d.html
@@ -469,7 +469,8 @@ const GAME_DATA = {
             { id: 5, title: '对韵歌', desc: '云对雨，雪对风。花对树，鸟对虫...' },
             { id: 6, title: '升国旗', desc: '五星红旗，我们的国旗...' },
             { id: 7, title: '小小的船', desc: '弯弯的月儿小小的船...' },
-            { id: 8, title: '比尾巴', desc: '谁的尾巴长？谁的尾巴短？...' }
+            { id: 8, title: '比尾巴', desc: '谁的尾巴长？谁的尾巴短？...' },
+            { id: 9, title: '两件宝', desc: '人有两件宝...' },
         ]
     },
     accumulation: {
@@ -480,10 +481,9 @@ const GAME_DATA = {
             { id: 102, title: '画', desc: '远看山有色，近听水无声...' },
             { id: 103, title: '悯农', desc: '锄禾日当午，汗滴禾下土...' },
             { id: 104, title: '古朗月行', desc: '小时不识月，呼作白玉盘...' },
-            { id: 105, title: '种瓜得瓜', desc: '种瓜得瓜，种豆得豆。（谚语）' },
-            { id: 106, title: '前人栽树', desc: '前人栽树，后人乘凉。（谚语）' },
-            { id: 107, title: '百尺竿头', desc: '百尺竿头，更进一步。（谚语）' },
-            { id: 108, title: '一年之计', desc: '一年之计在于春，一日之计在于晨。' }
+            { id: 105, title: '风', desc: '解落三秋叶，能开二月花...' },
+            { id: 106, title: '种瓜得瓜', desc: '种瓜得瓜，种豆得豆。（谚语）' },
+            { id: 107, title: '一年之计', desc: '一年之计在于春，一日之计在于晨。' }
         ]
     },
     speaking: {
